                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 11-01-2004 changed: Webserver authentication now defaults to BASIC instead of DIGEST.  Solves Firefox issues.
  - 10-01-2004 added: Second rendering method using overlays.
                      Renderers can be switched from the GUI (Video Settings->Filters)
                      Known Issues: 1080i may not be 100% in terms of Aspect ratio - it hasn't been tested
                                    Renderers cannot be switched on the fly - change will take effect at
                                    next movie play.
                                    Overlays method is much slower than the pixel shader method - reason is
                                    mostly to do with the software YV12->YUY2 conversion done by mplayer.
  - 10-01-2004 fixed: [ 1059668 ] OSD and scene skip bug.
  - 10-01-2004 fixed: Slideshow info shows part of directory instead of filename in osd
  - 10-01-2004 fixed: subtitles wouldn't display if on CD/DVD
  - 09-01-2004 updated: Greek language file (Thnx to modon)
  - 09-01-2005 fixed: fullscreen video view mode info, soften setting for video was not displayed
  - 09-01-2005 updated: Chinese (Traditional) language file (Thnx to iikii)
  - 09-01-2005 updated: Chinese (Simple) language file (Thnx to iikii)
  - 09-01-2005 fixed: Pathes in progress dialog where not correctly shortened
  - 09-01-2005 changed: minor GUIThumbnailPanel performance tweaks
  - 09-01-2005 fixed: scanning smb shares the second time doesn't show the add/rescan dialog
  - 09-01-2005 fixed: audio skips once on startup of videos
  - 09-01-2005 fixed [ 1090730 ] Playback Of MP3 Files With @