@@ -675,6 +675,7 @@
   <string><id>13354</id><value>Render Method</value></string>
   <string><id>13355</id><value>Pixel Shader</value></string>
   <string><id>13356</id><value>YUY2 Overlays</value></string>
+  <string><id>13357</id><value>Fast YUY2 Overlays</value></string>
 
   <string><id>14000</id><value>Stacking: Off</value></string>
   <string><id>14001</id><value>Stacking: Simple</value></string>
