@@ -508,6 +508,7 @@ void CGUIWindowSettingsCategory::CreateSettings()
 			CGUISpinControlEx *pControl = (CGUISpinControlEx *)GetControl(GetSetting(strSetting)->GetID());
 			pControl->AddLabel(g_localizeStrings.Get(13355), RENDER_PIXEL_SHADER);
 			pControl->AddLabel(g_localizeStrings.Get(13356), RENDER_OVERLAYS);
+			pControl->AddLabel(g_localizeStrings.Get(13357), RENDER_OVERLAYS_FAST);
 			pControl->SetValue(pSettingInt->GetData());
 		}
 		iPosY+=iGapY;
